package it.polimi.ingsw.common.message;

/**
 * Marker interface for all client-to-server command messages.
 * Commands represent requests for action or state change on the server.
 */
public interface Command extends Message {
}