@startuml it_polimi_ingsw_common_protocol
' Generated by tools/uml/generate-detailed.py. Do not edit by hand.
!pragma layout smetana
skinparam shadowing false
skinparam classAttributeIconSize 0
title it.polimi.ingsw.common.protocol

interface BuildingCommand {
}
class DrawFromPool <<record>> {
}
class TakeFaceUp <<record>> {
}
class TakeReserved <<record>> {
}
class ReturnToPool <<record>> {
}
class Reserve <<record>> {
}
class PlaceInHand <<record>> {
}
class AdjustPlacement <<record>> {
}
class Weld <<record>> {
}
class ScoutPile <<record>> {
}
class PutPileBack <<record>> {
}
class FlipTimer <<record>> {
}
class FinishBuilding <<record>> {
}
interface Command {
}
interface Event {
}
interface FlightCommand {
}
class Answer <<record>> {
}
class GiveUp <<record>> {
}
interface FlightEvent {
}
class CardRevealed <<record>> {
}
class Awaiting <<record>> {
}
class DiceRolled <<record>> {
}
class ThreatResolved <<record>> {
}
class ShipMoved <<record>> {
}
class ShipRetired <<record>> {
}
class CardResolved <<record>> {
}
interface GameEvent {
}
class StateChanged <<record>> {
}
class PhaseBegan <<record>> {
}
class Rejected <<record>> {
}
class ConnectionChanged <<record>> {
}
class TurnSkipped <<record>> {
}
class GameSuspended <<record>> {
}
class GameResumed <<record>> {
}
class GameEnded <<record>> {
}
interface LobbyCommand {
}
class Login <<record>> {
}
class ListGames <<record>> {
}
class CreateGame <<record>> {
}
class JoinGame <<record>> {
}
class LeaveGame <<record>> {
}
interface LobbyEvent {
}
class LoggedIn <<record>> {
}
class GamesListed <<record>> {
}
class JoinedGame <<record>> {
}
class PlayerEntered <<record>> {
}
class PlayerLeft <<record>> {
}
interface PreparationCommand {
}
class RemoveComponent <<record>> {
}
class KeepPiece <<record>> {
}
class BoardCrew <<record>> {
}
class FinishPreparation <<record>> {
}

Command <|-- BuildingCommand
BuildingCommand <|.. DrawFromPool
BuildingCommand <|.. TakeFaceUp
BuildingCommand <|.. TakeReserved
BuildingCommand <|.. ReturnToPool
BuildingCommand <|.. Reserve
BuildingCommand <|.. PlaceInHand
BuildingCommand <|.. AdjustPlacement
BuildingCommand <|.. Weld
BuildingCommand <|.. ScoutPile
BuildingCommand <|.. PutPileBack
BuildingCommand <|.. FlipTimer
BuildingCommand <|.. FinishBuilding
Command <|-- FlightCommand
FlightCommand <|.. Answer
FlightCommand <|.. GiveUp
Event <|-- FlightEvent
FlightEvent <|.. CardRevealed
FlightEvent <|.. Awaiting
FlightEvent <|.. DiceRolled
FlightEvent <|.. ThreatResolved
FlightEvent <|.. ShipMoved
FlightEvent <|.. ShipRetired
FlightEvent <|.. CardResolved
Event <|-- GameEvent
GameEvent <|.. StateChanged
GameEvent <|.. PhaseBegan
GameEvent <|.. Rejected
GameEvent <|.. ConnectionChanged
GameEvent <|.. TurnSkipped
GameEvent <|.. GameSuspended
GameEvent <|.. GameResumed
GameEvent <|.. GameEnded
Command <|-- LobbyCommand
LobbyCommand <|.. Login
LobbyCommand <|.. ListGames
LobbyCommand <|.. CreateGame
LobbyCommand <|.. JoinGame
LobbyCommand <|.. LeaveGame
Event <|-- LobbyEvent
LobbyEvent <|.. LoggedIn
LobbyEvent <|.. GamesListed
LobbyEvent <|.. JoinedGame
LobbyEvent <|.. PlayerEntered
LobbyEvent <|.. PlayerLeft
Command <|-- PreparationCommand
PreparationCommand <|.. RemoveComponent
PreparationCommand <|.. KeepPiece
PreparationCommand <|.. BoardCrew
PreparationCommand <|.. FinishPreparation
@enduml
